--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
 	},
 	"repository": { "type":"git", "url":"git://github.com/protobi/js-xlsx.git#beta" },
 	"scripts": {
-		"pretest": "git submodule init && git submodule update",
+		"pretest": "rm -rf test_files && mkdir test_files && cd test_files && git init && git remote add origin https://github.com/SheetJS/test_files && git fetch origin master && git checkout b07031a",
 		"test": "make test"
 	},
 	"config": {
