--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-	"name": "xlsx",
+	"private": true,
+	"name": "@foko/xlsx",
 	"version": "0.8.14",
 	"author": "sheetjs",
 	"description": "Excel (XLSB/XLSX/XLSM/XLS/XML) and ODS spreadsheet parser and writer (extended to enable read/write of cell formats with xlsx files)",
