--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,16 @@ language: node_js
 node_js:
 - 6
 - 8
-before_install:
-- npm install -g mocha
-- npm install blanket
-- npm install xlsjs
-- npm install coveralls mocha-lcov-reporter
-before_script:
-- make init
-- cd test_files; make all; cd -
-after_success:
-- make coveralls-spin
+# before_install:
+# - npm install -g mocha
+# - npm install blanket
+# - npm install xlsjs
+# - npm install coveralls mocha-lcov-reporter
+# before_script:
+# - make init
+# - cd test_files; make all; cd -
+# after_success:
+# - make coveralls-spin
 deploy:
   provider: npm
   email: aws@foko.co
