--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
 	"name": "@foko/xlsx",
+	"publishConfig": {
+		"access": "public"
+	},
 	"version": "0.8.16",
 	"author": "sheetjs",
 	"description": "Excel (XLSB/XLSX/XLSM/XLS/XML) and ODS spreadsheet parser and writer (extended to enable read/write of cell formats with xlsx files)",
